# NQueensParallel

code/cw2/: CMakeLists.txt  nqueens.cpp
code/mySol#1/: nqueens.cpp
